<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImHere</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Whatsapp">WhatsApp</string>
    <string name="animation_image">Animation does here</string>
    <string name="view">View</string>
    <string name="btn1">Save Location</string>
    <string name="title_activity_marker">MarkerActivity</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="name">Name</string>
    <string name="Loc">Address</string>
    <string name="save">Save</string>
    <string name="title_activity_db">DbActivity</string>
    <string name="send">Send Location</string>
    <string name="list">YOUR LOCATIONS LIST</string>
    <string name="delete">Delete</string>
    <string name="title_activity_send">SendActivity</string>
	<string name="spinner_title">Saved locations</string>
	<string name="share">share via</string>
</resources>